# swiftgum

./: .dockerignore  .env.local.example  .gitignore  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  biome.json  docker-compose.dev.yml  package.json  pnpm-lock.yaml  readme.md
.cursor/rules/: create-provider.mdc  database.mdc  logic.mdc  studio.mdc
.github/workflows/: release.yml
.husky/: pre-commit
apps/engine/: Dockerfile  Dockerfile.dev  fly.toml  main.py  package.json  pyproject.toml  tsconfig.json
apps/engine/lib/: database.py  queue.py
apps/engine/src/: instrument.ts  main.ts  queue.ts
apps/engine/src/db/: index.ts
apps/engine/src/export/: index.ts
apps/engine/src/parser/: index.ts
apps/engine/src/providers/: abstract.ts  google:drive.ts  index.ts  types.ts
apps/engine/src/providers/google:drive/: index.ts
apps/engine/src/providers/google:gmail/: index.ts
apps/engine/src/providers/notion/: index.ts
apps/engine/src/tmp/: index.ts
apps/engine/src/utils/: keepalive.ts  log.ts  token.ts
apps/interfaces/: index.ts  package.json
apps/shared/: package.json  tsconfig.json
apps/studio/: .env.local.example  Dockerfile.dev  components.json  next.config.ts  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
docs/: docs.json  introduction.mdx
docs/api-reference/: openapi.json
docs/architecture/: high-level-architecture.mdx
docs/database-entities/: auth-sessions.mdx  destinations.mdx  (+8 more)
scripts/: docker-cleanup.sh
supabase/: config.toml  seed.sql  types-server.d.ts  types.d.ts
(+210 files in other folders)
