[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "markitdown>=0.0.1a3",
    "psycopg[binary]>=3.2.4",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
